# sherpa-onnx

./: CMakeLists.txt  build-aarch64-linux-gnu.sh
c-api-examples/: CMakeLists.txt  recog_demo.cpp  sherpa-onnx-keyword-spotter-microphone.cc  test_feature.cc
cmake/: onnxruntime-linux-aarch64.cmake  onnxruntime.cmake
cpu_info/: CMakeLists.txt  card_serial.txt  generate_sn_tool.cc  get_cpu_info.cc  get_cpu_info.h  sign_sn_tool.cc  test_main.cc  test_sn
scripts/: merge_all_int8_files.sh  merge_three_2_one_file.cc
sherpa-onnx/c-api/: CMakeLists.txt  asr_api.h  asr_api_impl.cc  c-api.h  get_hardware_info.cc  kws_api.h
sherpa-onnx/csrc/: CMakeLists.txt  keyword-spotter-impl.cc  keyword-spotter-transducer-impl.h  keyword-spotter.h  macros.h  online-model-config.h  online-transducer-model-config.h  online-zipformer-transducer-model.cc  online-zipformer2-transducer-model.cc  symbol-table.cc  symbol-table.h  utils.cc
